base/old-object-detection-rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"object-detection-rest:latest","namespace":"retail-prod-rhods-project"},
      "fieldPath":"spec.template.spec.containers[?(@.name==\"object-detection-rest\")].image","pause":"false"}]
  labels:
    app: object-detection-rest
    app.kubernetes.io/component: object-detection-rest
    app.kubernetes.io/instance: object-detection-rest
  name: object-detection-rest
  namespace: "retail-prod-rhods-project"
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: object-detection-rest
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: object-detection-rest
    spec:
      containers:
      - env:
        - name: USERNAME
          value: user1
        image: "image-registry.openshift-image-registry.svc:5000/retail-prod-rhods-project/object-detection-rest"
        imagePullPolicy: IfNotPresent
        name: object-detection-rest
        ports:
        - containerPort: 8080
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
