base/object-detection-app-git-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: object-detection-app-git
    app.kubernetes.io/component: object-detection-app-git
    app.kubernetes.io/instance: object-detection-app-git
    app.kubernetes.io/name: object-detection-app-git
    app.kubernetes.io/part-of: object-detection
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 16-ubi8
  name: object-detection-app-git
  namespace: "retail-prod-rhods-project"
spec:
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    app: object-detection-app-git
    deploymentconfig: object-detection-app-git
