base/object-detection-rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: object-detection-rest
    app.kubernetes.io/component: object-detection-rest
    app.kubernetes.io/instance: object-detection-rest
  name: object-detection-rest
  namespace: "retail-prod-rhods-project"
spec:
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    deployment: object-detection-rest
