base/el-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: el-rhods-object-detect-rest
  name: el-el-rhods-object-detect-rest
  namespace: "retail-prod-rhods-project"
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-el-rhods-object-detect-rest
    weight: 100
  wildcardPolicy: None
#register: r_el-route
